persistent volume learn

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,6 +20,10 @@ spec:
               name: story-volume
       volumes:
         - name: story-volume
-          hostPath:
-            path: /data
-            type: DirectoryOrCreate   
+          # hostPath:
+          #   path: /data
+          #   type: DirectoryOrCreate 
+          persistentVolumeClaim:
+            claimName: host-pvc
+            
+
